--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ header.startup {
   background-image: url("header.jpg");
   background-size: cover;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 header.startup hr {
@@ -60,29 +62,24 @@ header.startup h1 {
 
 /* CountDown CSS */
 .countdown-wrapper {
-    text-align:center;
-    margin-top: 140px;
-    padding-bottom: 20px;
-    margin-bottom: 60px;
     /*height: 550px;*/
+    display:flex;
+    flex-direction: row;
+    padding-bottom: 200px;
 }
 
 
 .timer{
-    
     font-size: 35px;
     margin-left: 4%;
     margin-right: 4%;
     border-radius: 8px;
-    font-family: 'Montserrat', sans-serif;
 } 
 .counter-text {
     font-size: 25px;
-    font-family: 'Montserrat', sans-serif;
 }
 @media only screen and (max-width: 500px) {
     .timer{
-       
         font-size: 25px;
         border-radius: 8px;
         margin-left: 0;
