--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header.startup hr {
 }
 
 header.startup h1 {
+  margin-bottom: 100px;
   font-size: 2rem; 
 }
 
@@ -69,15 +70,13 @@ header.startup h1 {
     font-size: 35px;
     margin-left: 4%;
     margin-right: 4%;
-    border-radius: 8px;
-} 
+  } 
 .counter-text {
     font-size: 25px;
 }
 @media only screen and (max-width: 500px) {
     .timer{
         font-size: 25px;
-        border-radius: 8px;
         margin-left: 0;
         margin-right: 0;
     } 
