--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ header.startup hr {
 }
 
 header.startup h1 {
-  margin-bottom: 100px;
   font-size: 2rem; 
 }
 
@@ -63,6 +62,7 @@ header.startup h1 {
 
 /* CountDown CSS */
 .countdown-wrapper {
+    padding-top: 100px;
     display:flex;
     flex-direction: row;
 }
